test/tools/javac/annotations/annotationsInComments/Test11.out
Test11.java:14:4: compiler.err.cant.resolve: kindname.class, Annotation, , 
1 error